--- a/index.html
+++ b/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Actividad Pausas Activas Laborales">
-    <meta name="author" content="Cristian Alberto Hernandez">
-    <title>Pausas Activas Laborales</title>
 
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-    <script>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Actividad Pausas Activas Laborales">
+  <meta name="author" content="Cristian Alberto Hernandez">
+  <title>Pausas Activas Laborales</title>
+
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+
+  <!-- Pegar el script para rotar el dispositivo aqui Mirar -->
+  <script>
 
   
-      /* you can pass in options here */
-      var PleaseRotateOptions = {
-        startOnPageLoad: true,
-        onHide: function () { },
-        onShow: function () { },
-        forcePortrait: false,
-        message: "Por favor gire el dispositivo para realizar la actividad",
-        subMessage: "",
-        allowClickBypass: false,
-        onlyMobile: true,
-        zIndex: 9999999,
-        iconNode: null
-      };
+    /* you can pass in options here */
+    var PleaseRotateOptions = {
+      startOnPageLoad: true,
+      onHide: function () { },
+      onShow: function () { },
+      forcePortrait: false,
+      message: "Por favor gire el dispositivo para realizar la actividad",
+      subMessage: "",
+      allowClickBypass: false,
+      onlyMobile: true,
+      zIndex: 9999999,
+      iconNode: null
+    };
 
-      
-    </script>
-  
-  
-  
-    <script src="src/assets/helpers/pleaserotate.min.js"></script>
-  </body>
+    
+  </script>
+
+
+  <script src="pleaserotate.min.js"></script>
+
+
+</body>
+
 </html>
